# Digital_Twin_Race_Engineer

./: .gitignore  README.md  pyproject.toml
config/: input_calibration.example.json
core/: __init__.py  models.py
core/driver/: __init__.py  optimal_lap.py  pid_driver.py  rule_based.py  segments.py
core/events/: __init__.py  models.py
core/optimization/: __init__.py  metrics.py  speed_envelope.py  tune_driver.py
core/simulation/: __init__.py  constants.py  lap_simulator.py  physics.py  tracks.py
core/telemetry/: __init__.py  json_log.py
core/twin/: __init__.py  alignment.py  delta_engine.py  live_delta.py  smoothness.py
interfaces/: __init__.py
interfaces/input/: __init__.py  calibration.py  human_session.py  processing.py  pygame_backend.py  raw_types.py
interfaces/ui/: __init__.py  streamlit_app.py
tests/: test_calibration_and_smoothness.py  test_delta_engine.py  test_human_dil.py  test_phase1_sanity.py  test_phase2_virtual_driver.py  test_phase3_optimization.py
