[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-twin-race-engineer"
version = "0.1.0"
description = "Driver-in-the-Loop Digital Twin Race Engineer"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dil = ["pygame>=2.5.0"]
ui = ["streamlit>=1.28.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "interfaces*"]
